<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- 🍳 廚房管理 -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_kitchen"
            android:title="@string/drawer_kitchen_orders" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_table"
            android:title="@string/drawer_table_management" />
        <item
            android:id="@+id/nav_cash_payment"
            android:icon="@drawable/ic_coupon"
            android:title="@string/drawer_cash_payment_management" />
        <item
            android:id="@+id/nav_takeaway_cash"
            android:icon="@drawable/ic_coupon"
            android:title="@string/drawer_takeaway_cash_orders" />
    </group>

    <item android:title="@string/drawer_content_management">
        <menu>
            <item
                android:id="@+id/nav_create_dish"
                android:icon="@drawable/ic_add_dish"
                android:title="@string/drawer_create_dish" />
            <item
                android:id="@+id/nav_create_material"
                android:icon="@drawable/ic_add_material"
                android:title="@string/drawer_create_ingredient" />
            <item
                android:id="@+id/nav_create_coupon"
                android:icon="@drawable/ic_coupon"
                android:title="@string/drawer_create_coupon" />
        </menu>
    </item>

    <item android:title="@string/drawer_inventory_system">
        <menu>
            <item
                android:id="@+id/nav_inventory_system"
                android:icon="@drawable/ic_inventory"
                android:title="@string/drawer_inventory_management" />
            <item
                android:id="@+id/nav_inventory_history"
                android:icon="@drawable/ic_history"
                android:title="@string/drawer_inventory_history" />
        </menu>
    </item>

    <item android:title="@string/drawer_system">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_switch_language" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/drawer_logout" />
        </menu>
    </item>

</menu>