<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 🍳 廚房管理 -->
    <group android:id="@+id/kitchen_group">
        <item
            android:id="@+id/nav_orders"
            android:title="@string/drawer_kitchen_orders"
            android:icon="@drawable/ic_kitchen" />
        <item
            android:id="@+id/nav_tables"
            android:title="@string/drawer_table_management"
            android:icon="@drawable/ic_table" />
    </group>

    <!-- 📝 內容管理 -->
    <group android:id="@+id/content_group">
        <item
            android:id="@+id/nav_create_dish"
            android:title="@string/drawer_create_dish"
            android:icon="@drawable/ic_add_dish" />
        <item
            android:id="@+id/nav_create_material"
            android:title="@string/drawer_create_ingredient"
            android:icon="@drawable/ic_add_material" />
        <item
            android:id="@+id/nav_create_coupon"
            android:title="@string/drawer_create_coupon"
            android:icon="@drawable/ic_coupon" />
    </group>

    <!-- 📦 庫存系統 -->
    <group android:id="@+id/inventory_group">
        <item
            android:id="@+id/nav_inventory_system"
            android:title="@string/drawer_inventory_management"
            android:icon="@drawable/ic_inventory" />
        <item
            android:id="@+id/nav_inventory_history"
            android:title="@string/drawer_inventory_history"
            android:icon="@drawable/ic_history" />
    </group>

    <!-- 🚪 系統 -->
    <group android:id="@+id/system_group">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/drawer_logout"
            android:icon="@drawable/ic_logout" />
    </group>
</menu>