<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/etDecisionStaffId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/staff_id_hint"
        android:inputType="number"
        android:text="1"
        android:background="@drawable/edit_text_background"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etDecisionNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/decision_note_hint"
        android:background="@drawable/edit_text_background"
        android:padding="10dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbApplyStockNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apply_stock_immediately"
        android:checked="true" />

</LinearLayout>
